force-app/main/default/objects/Timecard__c/fields/hours__c.field-meta.xml
<CustomField>
    <fullName>hours__c</fullName>
    <label>hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>