force-app/main/default/objects/Timecard__c/fields/Hours_Mon__c.field-meta.xml
<CustomField>
    <fullName>Hours_Mon__c</fullName>
    <label>Hours (Mon)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>