force-app/main/default/objects/Timecard__c/fields/Hours_Thu__c.field-meta.xml
<CustomField>
    <fullName>Hours_Thu__c</fullName>
    <label>Hours (Thu)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>