force-app/main/default/objects/Timecard__c/fields/Hours_Tue__c.field-meta.xml
<CustomField>
    <fullName>Hours_Tue__c</fullName>
    <label>Hours (Tue)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>