force-app/main/default/objects/Timecard__c/fields/Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Resource</label>
    <referenceTo>Project_Resource__c</referenceTo>
    <relationshipLabel>Timecards</relationshipLabel>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>