force-app/main/default/objects/Timecard__c/fields/Week_Start__c.field-meta.xml
<CustomField>
    <fullName>Week_Start__c</fullName>
    <label>Week Start</label>
    <type>Date</type>
</CustomField>