force-app/main/default/objects/Timecard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Resource__c</columns>
    <columns>Week_Start__c</columns>
    <columns>Week_End__c</columns>
    <columns>hours__c</columns>
    <columns>Hours_Mon__c</columns>
    <columns>Hours_Tue__c</columns>
    <columns>Hours_Wed__c</columns>
    <columns>Hours_Thu__c</columns>
    <columns>Hours_Fri__c</columns>
    <columns>Hours_Sat__c</columns>
    <columns>Hours_Sun__c</columns>
    <columns>Project_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>